# tsr_carla_scripts

./: bbox_client.py  one_camera_bbox.py  spawn_npc_bbox.py  start_drive_tsr.py  svs_only_tsr.py
CppAPI/: CMakeLists.txt  main.cpp
